# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  build_deps.sh  build_exec.sh  compile_commands.json
include/: test.h
src/: CMakeLists.txt  fragment_shader.fs  functions.cpp  functions.h  main.cpp  shaders.cpp  shaders.h  test.cpp  test.h  vertex_shader.vs
test/: srctest.cpp  test.cpp
tests/: rectangle.cpp  triangle.cpp
